# cookiecutter-rustcrate

./: .gitignore  README.rst  cookiecutter.json  setup.py
{{cookiecutter.project_slug}}/: CHANGELOG.md  Cargo.toml  {{cookiecutter.project_slug}}
